templateに背景色追加

--- a/src/components/templates/news-and-events/newsAndEvents.scss
+++ b/src/components/templates/news-and-events/newsAndEvents.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 38px;
   padding: 56px 0px;
+  background-color: $white_smoke;
   .news {
     margin-bottom: 0px;
   }
