footerの|削除と背景画像の表示

--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -5,7 +5,7 @@
   margin-bottom: 30px;
   .img-group {
     position: relative;
-    background-image: url(../../../img/top.jpg);
+    background-image: url(./img/top.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     .literal {
