--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -3,7 +3,7 @@
   margin-bottom: 0px;
   .contact {
     background-color: $white;
-    background-image: url(../../../img/footer.png);
+    background-image: url(./img/footer.png);
     background-repeat: no-repeat;
     background-size: 150px 25.7px;
     background-position: top 32px center;
@@ -74,6 +74,9 @@
       }
       .side:last-child {
         margin-left: 8px;
+        a:last-child::after {
+          content: "";
+        }
       }
     }
   }
