--- a/style.css
+++ b/style.css
@@ -4,39 +4,27 @@ body {
 section {
   margin-bottom: 120px;
 }
-.button {
-  display: flex;
-  justify-content: center;
-  background-color: #000;
-  padding: 0 16px;
-  transition: all 0.2s ease;
-  color: #fff;
-  align-items: center;
-  cursor: pointer;
-  font-size: 14px;
-  width: 200px;
-  height: 55px;
-}
-.button:hover {
-  background-color: #442606;
-  color: #fff;
-  text-decoration: none;
-}
-@media screen and (max-width: 992px) {
-  .button {
-    width: 150px;
-    height: 55px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .button {
-    width: 180px;
-    height: 45px;
-  }
-}
 .assignment-example-button {
   color: red;
   font-size: 16px;
+}
+.news-and-events-more {
+  align-self: flex-end;
+  margin-top: 16px;
+  cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.2s ease;
+  display: inline-flex;
+  align-items: center;
+}
+.news-and-events-more:hover {
+  color: #999;
+  text-decoration: none;
+}
+.news-and-events-more > i {
+  margin-left: 16px;
 }
 .card-change {
   overflow: hidden;
@@ -82,6 +70,54 @@ section {
 .card-change .card-body-field .button-change {
   margin: 30px auto 0 auto;
 }
+.button {
+  display: flex;
+  justify-content: center;
+  background-color: #000;
+  padding: 0 16px;
+  transition: all 0.2s ease;
+  color: #fff;
+  align-items: center;
+  cursor: pointer;
+  font-size: 14px;
+  width: 200px;
+  height: 55px;
+}
+.button:hover {
+  background-color: #442606;
+  color: #fff;
+  text-decoration: none;
+}
+@media screen and (max-width: 992px) {
+  .button {
+    width: 150px;
+    height: 55px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .button {
+    width: 180px;
+    height: 45px;
+  }
+}
+.news-and-events-title > h2 {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Noto Serif JP", serif;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .news-and-events-title > h2 {
+    font-size: 40px;
+  }
+}
+.news-and-events-title > h2 .caption {
+  font-size: 16px;
+  font-family: Roboto, "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  margin-left: 16px;
+}
 .message {
   text-align: center;
   padding: 52px 20px;
@@ -118,42 +154,6 @@ section {
   .message .explanation-text {
     line-height: 28px;
   }
-}
-.news-and-events-more {
-  align-self: flex-end;
-  margin-top: 16px;
-  cursor: pointer;
-  color: #000;
-  text-decoration: none;
-  font-size: 14px;
-  transition: color 0.2s ease;
-  display: inline-flex;
-  align-items: center;
-}
-.news-and-events-more:hover {
-  color: #999;
-  text-decoration: none;
-}
-.news-and-events-more > i {
-  margin-left: 16px;
-}
-.news-and-events-title > h2 {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  font-family: "Noto Serif JP", serif;
-  margin-bottom: 32px;
-}
-@media (min-width: 768px) {
-  .news-and-events-title > h2 {
-    font-size: 40px;
-  }
-}
-.news-and-events-title > h2 .caption {
-  font-size: 16px;
-  font-family: Roboto, "Noto Sans JP", sans-serif;
-  font-weight: 400;
-  margin-left: 16px;
 }
 ul.plan {
   list-style-type: none;
@@ -426,7 +426,7 @@ ul.plan:nth-child(even) li:last-child {
 }
 .footer .contact {
   background-color: #fff;
-  background-image: url(img/footer.png);
+  background-image: url(../../../img/footer.png);
   background-repeat: no-repeat;
   background-size: 150px 25.7px;
   background-position: top 32px center;
@@ -498,49 +498,6 @@ ul.plan:nth-child(even) li:last-child {
   .footer .content-list .side:last-child a:last-child::after {
     content: "";
   }
-}
-.news-contents {
-  padding-left: 0;
-  margin-bottom: 0;
-}
-.news-contents article {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  height: 85px;
-  background-color: #fff;
-  border-top: 1px solid #ddd;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  cursor: pointer;
-}
-.news-contents article time {
-  margin: 0 0 10px;
-  font-size: 12px;
-  line-height: 12px;
-  color: #999;
-}
-.news-contents article h2 {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 23px;
-  margin-bottom: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.news-contents article h2:hover {
-  color: #442606;
-}
-.news-contents article:last-child {
-  border-bottom: 1px solid #ddd;
-}
-.notice {
-  text-align: right;
-}
-.notice .minor-change {
-  margin-top: 30px;
-  width: fit-content;
 }
 header.navbar {
   background-color: #000;
@@ -746,34 +703,48 @@ header.navbar div#contents ul.navbar-nav li:last-child {
     margin-bottom: 31px;
   }
 }
-section.plans {
-  margin-bottom: 35px;
+.news-contents {
+  padding-left: 0;
+  margin-bottom: 0;
 }
-section.plans .message {
-  padding: 0 0 56px;
+.news-contents article {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  height: 85px;
+  background-color: #fff;
+  border-top: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  cursor: pointer;
 }
-section.plans .message h2 {
+.news-contents article time {
+  margin: 0 0 10px;
+  font-size: 12px;
+  line-height: 12px;
+  color: #999;
+}
+.news-contents article h2 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+  margin-bottom: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.news-contents article h2:hover {
   color: #442606;
 }
-section.plans .button {
-  margin: 24px auto;
+.news-contents article:last-child {
+  border-bottom: 1px solid #ddd;
 }
-@media screen and (min-width: 768px) {
-  section.plans {
-    margin-bottom: 100px;
-  }
-  section.plans .message {
-    padding: 0 0 32px;
-  }
-  section.plans .plan-group {
-    display: flex;
-  }
-  section.plans .plan-group .plan {
-    margin: 0 15px;
-  }
-  section.plans .button {
-    margin: 45px auto;
-  }
+.notice {
+  text-align: right;
+}
+.notice .minor-change {
+  margin-top: 30px;
+  width: fit-content;
 }
 .message {
   text-align: center;
@@ -817,7 +788,7 @@ section.plans .button {
 }
 .top .img-group {
   position: relative;
-  background-image: url(img/top.jpg);
+  background-image: url(../../../img/top.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -888,6 +859,35 @@ section.plans .button {
   }
   .top .message p {
     width: 100%;
+  }
+}
+section.plans {
+  margin-bottom: 35px;
+}
+section.plans .message {
+  padding: 0 0 56px;
+}
+section.plans .message h2 {
+  color: #442606;
+}
+section.plans .button {
+  margin: 24px auto;
+}
+@media screen and (min-width: 768px) {
+  section.plans {
+    margin-bottom: 100px;
+  }
+  section.plans .message {
+    padding: 0 0 32px;
+  }
+  section.plans .plan-group {
+    display: flex;
+  }
+  section.plans .plan-group .plan {
+    margin: 0 15px;
+  }
+  section.plans .button {
+    margin: 45px auto;
   }
 }
 .news-and-events {
