--- a/src/page/style.css
+++ b/src/page/style.css
@@ -4,27 +4,35 @@ body {
 section {
   margin-bottom: 120px;
 }
-.assignment-example-button {
-  color: red;
-  font-size: 16px;
-}
-.news-and-events-more {
-  align-self: flex-end;
-  margin-top: 16px;
-  cursor: pointer;
-  color: #000;
-  text-decoration: none;
-  font-size: 14px;
-  transition: color 0.2s ease;
-  display: inline-flex;
+.button {
+  display: flex;
+  justify-content: center;
+  background-color: #000;
+  padding: 0 16px;
+  transition: all 0.2s ease;
+  color: #fff;
   align-items: center;
+  cursor: pointer;
+  font-size: 14px;
+  width: 200px;
+  height: 55px;
 }
-.news-and-events-more:hover {
-  color: #999;
+.button:hover {
+  background-color: #442606;
+  color: #fff;
   text-decoration: none;
 }
-.news-and-events-more > i {
-  margin-left: 16px;
+@media screen and (max-width: 992px) {
+  .button {
+    width: 150px;
+    height: 55px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .button {
+    width: 180px;
+    height: 45px;
+  }
 }
 .card-change {
   overflow: hidden;
@@ -70,54 +78,6 @@ section {
 .card-change .card-body-field .button-change {
   margin: 30px auto 0 auto;
 }
-.button {
-  display: flex;
-  justify-content: center;
-  background-color: #000;
-  padding: 0 16px;
-  transition: all 0.2s ease;
-  color: #fff;
-  align-items: center;
-  cursor: pointer;
-  font-size: 14px;
-  width: 200px;
-  height: 55px;
-}
-.button:hover {
-  background-color: #442606;
-  color: #fff;
-  text-decoration: none;
-}
-@media screen and (max-width: 992px) {
-  .button {
-    width: 150px;
-    height: 55px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .button {
-    width: 180px;
-    height: 45px;
-  }
-}
-.news-and-events-title > h2 {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  font-family: "Noto Serif JP", serif;
-  margin-bottom: 32px;
-}
-@media (min-width: 768px) {
-  .news-and-events-title > h2 {
-    font-size: 40px;
-  }
-}
-.news-and-events-title > h2 .caption {
-  font-size: 16px;
-  font-family: Roboto, "Noto Sans JP", sans-serif;
-  font-weight: 400;
-  margin-left: 16px;
-}
 .message {
   text-align: center;
   padding: 52px 20px;
@@ -154,6 +114,24 @@ section {
   .message .explanation-text {
     line-height: 28px;
   }
+}
+.news-and-events-more {
+  align-self: flex-end;
+  margin-top: 16px;
+  cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.2s ease;
+  display: inline-flex;
+  align-items: center;
+}
+.news-and-events-more:hover {
+  color: #999;
+  text-decoration: none;
+}
+.news-and-events-more > i {
+  margin-left: 16px;
 }
 ul.plan {
   list-style-type: none;
@@ -260,6 +238,24 @@ ul.plan:nth-child(even) li:last-child {
   padding-top: 18px;
   padding-bottom: 17px;
 }
+.news-and-events-title > h2 {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Noto Serif JP", serif;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .news-and-events-title > h2 {
+    font-size: 40px;
+  }
+}
+.news-and-events-title > h2 .caption {
+  font-size: 16px;
+  font-family: Roboto, "Noto Sans JP", sans-serif;
+  font-weight: 400;
+  margin-left: 16px;
+}
 .message {
   text-align: center;
   padding: 52px 20px;
@@ -298,7 +294,7 @@ ul.plan:nth-child(even) li:last-child {
   }
 }
 .about {
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
 @media screen and (min-width: 992px) {
   .about .img-group {
@@ -861,6 +857,10 @@ header.navbar div#contents ul.navbar-nav li:last-child {
     width: 100%;
   }
 }
+.assignment-example-button {
+  color: red;
+  font-size: 16px;
+}
 section.plans {
   margin-bottom: 35px;
 }
@@ -913,22 +913,22 @@ section.plans .button {
   margin-top: 30px;
 }
 @media screen and (min-width: 992px) {
-  .news-and-events {
+  .news-and-events .container {
     display: flex;
     flex-direction: row;
     gap: 40px;
   }
-  .news-and-events .news {
+  .news-and-events .container .news {
     min-width: 0;
     flex: 1;
     margin-bottom: 0;
   }
-  .news-and-events .events {
+  .news-and-events .container .events {
     min-width: 0;
     flex: 1;
     margin: 0;
   }
-  .news-and-events .events .event-list .event-card a {
+  .news-and-events .container .events .event-list .event-card a {
     height: 141px;
   }
 }
