--- a/src/page/style.css
+++ b/src/page/style.css
@@ -784,7 +784,7 @@ header.navbar div#contents ul.navbar-nav li:last-child {
 }
 .top .img-group {
   position: relative;
-  background-image: url(../../../img/top.jpg);
+  background-image: url(./img/top.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
