--- a/src/components/templates/news-and-events/newsAndEvents.scss
+++ b/src/components/templates/news-and-events/newsAndEvents.scss
@@ -1,28 +1,30 @@
 @use "../../variables" as *;
 
 .news-and-events {
-  display: flex;
-  flex-direction: column;
-  gap: 38px;
   padding: 56px 0px;
   background-color: $white_smoke;
-  .news {
-    margin-bottom: 0px;
-  }
-  .events {
-    margin-bottom: 0px;
-    .event-card {
-      .event-caption {
-        h3 {
-          font-weight: 400;
-        }
-      }
-    }
-    .event-list {
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 38px;
+    .news {
       margin-bottom: 0px;
     }
-    .news-and-events-more {
-      margin-top: 30px;
+    .events {
+      margin-bottom: 0px;
+      .event-card {
+        .event-caption {
+          h3 {
+            font-weight: 400;
+          }
+        }
+      }
+      .event-list {
+        margin-bottom: 0px;
+      }
+      .news-and-events-more {
+        margin-top: 30px;
+      }
     }
   }
   @media screen and(min-width:$breakpoint-lg) {
