--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -122,6 +122,8 @@ header.navbar {
     padding: 0px;
     padding-right: 30px;
     width: 100%;
+    position: absolute;
+    z-index: 100;
     a {
       margin: 33px;
       img {
@@ -134,6 +136,9 @@ header.navbar {
     }
     div.collapse {
       display: block;
+      .plus-circle {
+        display: none;
+      }
     }
     div#contents {
       ul.navbar-nav {
