--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -120,10 +120,10 @@ header.navbar {
     background-color: $black_50;
     display: flex;
     padding: 0px;
-    padding-right: 30px;
     width: 100%;
     position: absolute;
     z-index: 100;
+    justify-content: center;
     a {
       margin: 33px;
       img {
